# cpp-game

./: .gitignore  CMakeLists.txt  Makefile  cpp-game.code-workspace  premake5.lua
.github/common-build-actions/configureCMake/: action.yaml
.github/common-build-actions/configureGL/: action.yaml
.github/common-build-actions/test/: action.yaml
.github/common-build-actions/upload/: action.yaml
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  cmake.yml  common-build-actions.yaml
cpp-game/: CMakeLists.txt  Makefile
cpp-game/lib/Win64/: glfw3.lib  libglew32.lib
cpp-game/res/shaders/: Basic.shader
cpp-game/src/: GL.h  Game.cpp  Game.h  OGL.cpp  OGL.h  Shaders.hpp  application.cpp  application.h  game.cpp  game.h  game_controls.cpp  game_controls.h  main.cpp
cpp-game/src/GameLoop/: App.cpp  App.h  Game.cpp  Game.h  ReturnCodes.h
cpp-game/src/GameObjects/: DynamicObject.cpp  DynamicObject.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  StaticObject.cpp  StaticObject.h
cpp-game/src/GameObjects/Components/: Component.cpp  Component.h  QuadRenderer.cpp  QuadRenderer.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h
cpp-game/src/Graphics/: GL.cpp  GL.h  GrahicsStructs.cpp  GrahicsStructs.h  GrahicsStructs.hpp  GraphicsContext.cpp  GraphicsContext.h  GraphicsObject.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Shaders.hpp  Texture.cpp  Texture.h  Triangle.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  WindowData.cpp  WindowData.h
cpp-game/src/Graphics/old/: GrahicsStructs.cpp  GrahicsStructs.h  Shaders.hpp  Texture.cpp  Texture.h
cpp-game/src/Objects/: Object.cpp  Object.h  Player.cpp  Player.h
cpp-game/src/Objects/Components/: BoxRenderer.cpp  BoxRenderer.h  ObjectRenderer.cpp  ObjectRenderer.h  TransformComponent.cpp  TransformComponent.h
cpp-game/src/Resources/: Asset.cpp  Asset.h  AssetDatabase.cpp  AssetDatabase.h
cpp-game/src/Utilities/: Vectors.h
cpp-game/src/Utils/: Bounds.cpp  Bounds.h  GL.h  ObjParser.cpp  ObjParser.h  Physics.h  RendererFarm.h  ReturnCodes.h  Vector.h
